src/test/ui/did_you_mean/issue-38147-1.stderr
error[E0389]: cannot borrow data mutably in a `&` reference
  --> $DIR/issue-38147-1.rs:27:9
   |
26 |     fn f(&self) {
   |          ----- use `&mut self` here to make mutable
27 |         self.s.push('x');
   |         ^^^^^^ assignment into an immutable reference

error: aborting due to previous error

